cmake_minimum_required(VERSION 3.20)
project(cpplearn11)

set(CMAKE_CXX_STANDARD 11)

add_executable(Log src/Log.cpp src/main.cpp src/Log.h)
add_executable(math src/math.cpp)
add_executable(static_ cpp/static_.cpp cpp/var.cpp cpp/fun.h)
add_executable(enumcpp ENUM/enumcpp.cpp)
add_executable(cons Constructor/cons.cpp)
add_executable(des destructor/des.cpp)
add_executable(inh inheritance/inh.cpp)
add_executable(vf "virtual function/vf.cpp")
add_executable(int interface/int.cpp)
add_executable(Visibility Visibility/Visibility.cpp)
add_executable(arr array/arr.cpp)
add_executable(str string/str.cpp)
add_executable(strlit string/strlit.cpp)
add_executable(con const/con.cpp)
add_executable(mut mutable/mut.cpp)
add_executable(mgraph data_structure/mgraph.c data_structure/adjgraph.c data_structure/OLG.c "data_structure/Adjacency Multilist.c" data_structure/BFS.c data_structure/main.c)